tests/lean/implicitTypePos.lean.expected.out
implicitTypePos.lean:1:8-1:9: error: Failed to infer type of binder 'y'
implicitTypePos.lean:1:6-1:7: error: Failed to infer type of binder 'x'
implicitTypePos.lean:3:9-3:10: error: Failed to infer type of binder 'y'
implicitTypePos.lean:5:9-5:10: error: Failed to infer type of binder 'β'
implicitTypePos.lean:7:10-7:11: error: Failed to infer type of binder 'β'
